--- a/templates/scheduler.html
+++ b/templates/scheduler.html
@@ -64,8 +64,8 @@
                                                 <div class="visual margin-visual-top margin-visual">
                                                    
                                                 </div>
-                                                <div class="dropdown scheduler-filters ml-5">
-                                                        <button class="btn red-bg " type="button" id="notifyFarmers"  aria-haspopup="true" aria-expanded="false">
+                                                <div class="ml-5">
+                                                        <button class="btn red-bg float-right " type="button" id="notifyFarmers"  aria-haspopup="true" aria-expanded="false">
                                                           Notify Farmers
                                                         </button>
                                                 </div>
