--- a/static/css/cc.css
+++ b/static/css/cc.css
@@ -131,6 +131,9 @@ body{
     font-size:16px;
 }
 
+.font-size24{
+    font-size:24px;
+}
 .font-size10{
     font-size:10px;
 }
@@ -309,7 +312,7 @@ div ::-webkit-scrollbar-thumb {
 .card-title{
     width: auto;
     border-radius: 10px;
-    background-color: #FFFFFF;
+    background-color: #f6f6f6;
     box-shadow: none!important;
 }
 
@@ -387,11 +390,11 @@ div ::-webkit-scrollbar-thumb {
 }
 
 .margin-visual{
-    margin-left: 4%;
+    margin-left: 1%;
 }
 
 .margin-visual-top{
-    margin-top: 12%;
+    margin-top: 8%;
 }
 
 .scheduler-filters{
@@ -408,6 +411,146 @@ div ::-webkit-scrollbar-thumb {
 .active{
     border-bottom: 2px solid #fff;
 }
+
+.add-crop-text{
+    font-weight: 2000 !important;
+    font-size: 30px;
+}
+
+.form-text{
+    font-size: 20px;
+}
+
+.add{
+    width: 120px;
+}
+
+.crop-text-box{
+    width: 300px;
+}
+
+
+.d3-tip {
+    line-height: 1;
+    font-weight: bold;
+    padding: 12px;
+    background: #001F3D;
+    color: #fff;
+    border-radius: 2px;
+    top: -10px;
+  }
+  
+  /* Creates a small triangle extender for the tooltip */
+  .d3-tip:after {
+    box-sizing: border-box;
+    display: inline;
+    font-size: 14px;
+    width: 100%;
+    font-family: 'lato';
+    line-height: 1;
+    color: rgba(0, 0, 0, 0.8);
+    content: "\25BC";
+    position: absolute;
+    text-align: center;
+    
+  }
+  
+  /* Style northward tooltips differently */
+  .d3-tip.n:after {
+    margin: -20px 0 0 0;
+    top: 100%;
+    left: 0;
+  }
+
+  .tip-heading{
+      color:#ECF1F6;
+      font-size: 16px;
+  }
+
+  .margin-left-config{
+      margin-left: 0%;
+  }
+
+  .t-row{
+      
+      line-height: 1;
+      color: #fff;
+      
+  }
+
+  .margin-top-center{
+      margin-top: 5%;
+  }
+
+
+  .table{
+      width:auto
+  }
+
+
+  .table-fixed thead {
+    width: 100%;
+   
+  }
+  .table-fixed tbody {
+    height: 320px;
+    overflow-y: auto;
+    width: 100%;
+  }
+  .table-fixed thead, .table-fixed tbody, .table-fixed tr, .table-fixed td, .table-fixed th {
+    display: block;
+  }
+  .table-fixed tbody td, .table-fixed thead > tr> th {
+    float: left;
+    border-bottom-width: 0;
+  }
+
+  th{
+    background-color: #ba4e63
+  }
+
+  th{
+      width: 180px;
+  }
+
+  td{
+      width: 180px
+  }
+
+  .action{
+      background-color:#ECF1F6
+  }
+
+  #requestfarmer{
+      width: 100px;
+      font-size: 12px;
+  }
+
+  .change-neg{
+      color: #ba4e63
+  }
+
+  .change-pos{
+      color: #228B22
+  }
+
+  #dropdownFeederButton{
+      font-size: 20px;
+  }
+
+ 
+
+
+
+
+
+
+      
+  
+  
+
+
+  
 
 
 
