--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
                <div class="row mx-0 mt-3 justify-content-left">
                    <div class="col-12 col-sm-12 col-md-8">
                        <span class="landing-message">
-                            ALL LIVES <br/> HAVE EQUAL VALUE
+                            Power Supply <br/> Made Easy
                        </span>
                    </div>
                </div>
